# mp4_to_mp3

./: .gitignore  01_extract_audios.py  02_transcribe_audios.py  README.md  app.py  pyproject.toml
